# Bell

./: README.md
SourceCode/Bell/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
SourceCode/Bell/main/: CMakeLists.txt  idf_component.yml  main.c
SourceCode/Bell/main/App/: App_WS.c  App_WS.h
SourceCode/Bell/main/Dri/: Dri_MQTT.c  Dri_MQTT.h  Dri_OV2640.c  Dri_OV2640.h  Dri_WIFI.c  Dri_WIFI.h
SourceCode/Bell/main/Int/: Int_ES8311.c  Int_ES8311.h  Int_WS2812.c  Int_WS2812.h
资料/MD资料/: 01.系统总体架构.md  02.硬件选型.md  03.相关知识介绍.md  04.工程搭建.md  05.ES8311.md  06.配网.md  07.MQTT模块.md  08.WebSocket协议.md  09.音频的收发.md  10.摄像头驱动.md  11.灯光照明.md
资料/官方资料/python/服务器程序/web_server/: audio.aac  audio.pcm  main.py
资料/官方资料/python/服务器程序/web_server/__MACOSX/: ._static
资料/官方资料/python/服务器程序/web_server/__MACOSX/static/: ._home.html
资料/官方资料/python/服务器程序/web_server/static/: home.html  mqtt.js  pcm-player.js
资料/组件/: 组件.md
